# Model-Family-Diffing

./: neel_scratch.py  pyproject.toml  requirements.txt  scratch.py  vector_diffing.py  vector_mean_diffing.py
activation_data/qwen2.5_14B_instruct_rank32_mean_activations/: model-a_data-a_hs.pt  model-a_data-m_hs.pt  model-m_data-a_hs.pt  model-m_data-m_hs.pt
activation_data/qwen2.5_14B_instruct_rank8_mean_activations/: model-a_data-a_hs.pt  model-a_data-m_hs.pt  model-m_data-a_hs.pt  model-m_data-m_hs.pt
